[package]
name = "trappist"
version = "1.0.0"
description = "A versatile Proof-of-Authority (PoA) Blockchain network."
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
default-run = "trappist-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "trappist-node"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
parity-scale-codec = { workspace = true }
futures = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true, features = ["std"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Local Dependencies
trappist-runtime = { workspace = true, optional = true }
stout-runtime = { workspace = true, optional = true }
jsonrpsee = { workspace = true, features = ["server"] }

# External Dependencies
pallet-dex-rpc = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-consensus = { workspace = true }
sp-session = { workspace = true, features = ["std"] }
sc-consensus = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-executor = { workspace = true }
sc-service = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sp-transaction-pool = { workspace = true, features = ["std"] }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-basic-authorship = { workspace = true }
sp-timestamp = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true }
sp-blockchain = { workspace = true }
sp-block-builder = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-keystore = { workspace = true, features = ["std"] }
sc-chain-spec = { workspace = true }
sc-rpc = { workspace = true }
sc-tracing = { workspace = true }
sp-offchain = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-consensus-aura = { workspace = true, features = ["std"] }
sc-sysinfo = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }
sc-transaction-pool-api = { workspace = true }
frame-system = { workspace = true }
frame-rpc-system = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
substrate-state-trie-migration-rpc = { workspace = true }

# Polkadot
polkadot-cli = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true, features = ["std"] }

# Cumulus
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-relay-chain = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-consensus-proposer = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-primitives-core = { workspace = true, features = ["std"] }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }

parachains-common = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
nix = { workspace = true }
tempfile = "3.3.0"
tokio = { workspace = true }
wait-timeout = { workspace = true }
# purge_chain_works works with rococo-local and needs to allow this
polkadot-cli = { workspace = true }

[features]
default = ["trappist-runtime", "stout-runtime"]
runtime-benchmarks = [
	"trappist-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"stout-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks"
]
try-runtime = [
	"trappist-runtime/try-runtime",
	"try-runtime-cli/try-runtime"
]
parameterized-consensus-hook = []
